--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-SECRET_KEY=xLa2eO1D84VQLChCBzZCrFV2W-YsMz76ulSkIOMziU3QEBuC0QLTRYEtNqNjnUpn
+SECRET_KEY=
 DEBUG=True
 ALLOWED_HOSTS=localhost,127.0.0.1
-DB_NAME=houseme_db
-DB_USER=new_admin
-DB_PASSWORD=databaseadmin2024!
+DB_NAME=
+DB_USER=
+DB_PASSWORD=!
 DB_HOST=localhost
 DB_PORT=5432
